--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,3 +2,10 @@
     height: 5rem;
     width: 5rem;
 }
+.clearBTN {
+    height: 5rem;
+    width: 20rem;
+}
+.calculatorShape {
+    width: 25rem;
+}
